feat: 테스트코드에 따른 검증 추가